my_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello
    run: deployment
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 80
