my_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: hello-ingress
spec:
  rules:
  - host: ingress1.example.com
    http:
      paths:
      - backend:
          serviceName: hello-service
          servicePort: 4000
  - host: ingress2.example.com
    http:
      paths:
      - backend:
          serviceName: hello-v3
          servicePort: 4040
  - host: ingress.example.com
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: hello-service
          servicePort: 4000
      - path: /v3/?(.*)
        backend:
          serviceName: hello-v3
          servicePort: 4040
